# gnome-turtle

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.build  TODO  configure.in  gnome-turtle.desktop  gnome-turtle.pc.in  gnome-turtle.spec.in  meson.build  my_autogen.sh
examples/: t02_bent_big_h  t03_weed1  t04_weed2  t05_dragon_curve  t06_sierpinski_maze  t07_carpet  t08_sierpinski_gasket  t09_square_spikes  t10_penrose_snowflake  t11_grid  t12_triang_grid  t13_hexagones
macros/: Makefile.in  g-wrap.m4  intltool.m4  ltdl.m4  opencdk.m4
po/: ChangeLog  POTFILES  POTFILES.in  cat-id-tbl.c  gnome-turtle.pot
src/: Makefile.am  gnome-turtle.c  turtle-helpers.c  turtle-helpers.h  turtle-parser.y  turtle-scanner.l
