SUBDIRS = po src

EXTRA_DIST = \
	gnome-turtle.desktop \
	gnome-turtle.png \
	TODO \
	BUGS

iconpixmapdir = $(datadir)/pixmaps
iconpixmap_DATA = gnome-turtle.png

Gamesdir = $(datadir)/gnome/apps/Games
Games_DATA = gnome-turtle.desktop

# install-data-local:
#	-$(mkinstalldirs) # $(DESTDIR)$(scoredir)
#	-chgrp games $(DESTDIR)$(bindir)/gnome-turtle && chmod 2755 $(DESTDIR)$(bindir)/gnome-turtle
