dnl Process this file with autoconf to produce a configure script.

dnl Require autoconf >= 2.52 
AC_PREREQ(2.52)

AC_INIT(gnome-turtle, 0.1.2, http://www.bidon.ca/gnome-turtle/bugs/)
AC_CONFIG_SRCDIR(src/gnome-turtle.c)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)

GNOMETURTLE_MAJOR=0.1
AC_SUBST(GNOMETURTLE_MAJOR)

AM_MAINTAINER_MODE
AM_CONFIG_HEADER(config.h)

dnl I'm not sure why this line, I copied from gedit2:
AC_PROG_INTLTOOL([0.29])

AM_PROG_LIBTOOL

AC_ISC_POSIX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

dnl specific things for flex/bison
AC_PROG_YACC
AM_PROG_LEX

dnl make sure we keep ACLOCAL_FLAGS around for maintainer builds to work
AC_SUBST(ACLOCAL_AMFLAGS, "$ACLOCAL_FLAGS")

dnl
dnl Gettext stuff.
dnl
GETTEXT_PACKAGE=gnome-turtle-0.1
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [Gettext package])
ALL_LINGUAS="fr"
AM_GLIB_GNU_GETTEXT

dnl
dnl Start of pkg-config checks
dnl
PKG_CHECK_MODULES(GNOMETURTLE,
		glib-2.0 >= 2.2.0 
		gtk+-2.0 >= 2.2.0
		libgnome-2.0 >= 2.4.0
		libgnomeui-2.0 >= 2.4.0 
		libgnomeprintui-2.2 >= 2.4.0)

GNOMETURTLE_LIBS="${GNOMETURTLE_LIBS}"
GNOMETURTLE_CLAGS="-DYYERROR_VERBOSE"

AC_SUBST(GNOMETURTLE_LIBS)
AC_SUBST(GNOMETURTLE_CFLAGS)

dnl
dnl PIXMAPS 
dnl
if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(PIXMAPS_DIR, "${ac_default_prefix}/${DATADIRNAME}/${PACKAGE}/pixmaps", [Directory of pixmaps])
  pixmapsdir="${ac_default_prefix}/${DATADIRNAME}/${PACKAGE}/pixmaps"
else
  AC_DEFINE_UNQUOTED(PIXMAPS_DIR, "${prefix}/${DATADIRNAME}/${PACKAGE}/pixmaps", [Directory of pixmaps])
  pixmapsdir="${prefix}/${DATADIRNAME}/${PACKAGE}/pixmaps"
fi


AC_SUBST(pixmapsdir)
AC_PATH_PROG(GLIB_GENMARSHAL, glib-genmarshal)
GNOME_COMPILE_WARNINGS(yes)

AC_ARG_ENABLE(deprecations,
              [AC_HELP_STRING([--enable-deprecations],
                              [warn about deprecated usages [default=no]])],,
              [enable_deprecations=no])

if test "x$enable_deprecations" = "xyes"; then
   DISABLE_DEPRECATED_CFLAGS="\
-DG_DISABLE_DEPRECATED \
-DGDK_DISABLE_DEPRECATED \
-DGTK_DISABLE_DEPRECATED \
-DGDK_PIXBUF_DISABLE_DEPRECATED \
-DGNOME_DISABLE_DEPRECATED"
   AC_SUBST(DISABLE_DEPRECATED_CFLAGS)
fi


AC_OUTPUT([
Makefile
src/Makefile
po/Makefile.in
gnome-turtle.pc
])

